rating fix truncate html

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3960,3 +3960,17 @@ h6 {
   z-index: 0;
   background: transparent;
 }
+
+.lines-3{height: 3.2em;}
+.lines-6{height: 6.8em;}
+.truncate {overflow: hidden; position:relative}
+.truncate:after{
+    content:"";
+    height: 1em;
+    display: block;
+    width: 100%;
+    position:absolute;
+    background-color:white;
+    opacity: 0.8;
+    bottom: -0.3em
+}
